<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/hotel"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayout"
        android:layout_width="380dp"
        android:layout_height="506dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainText">

        <ImageView
            android:id="@+id/image"
            android:layout_width="366dp"
            android:layout_height="307dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/hotel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="141dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/grade"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/ic_star"
                android:backgroundTint="#FFA800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textColor="#FFA800"></TextView>
        </LinearLayout>

        <TextView
            android:layout_width="256dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:text="@string/HotelName"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="27dp"
            android:layout_marginTop="52dp"
            android:text="@string/place"
            android:textColor="#0D72FF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="183dp"
            android:layout_height="40dp"
            android:layout_marginTop="84dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="131dp"
            android:layout_height="21dp"
            android:layout_marginTop="100dp"
            android:text="@string/Fly"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="146dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:text="@string/aboutHotel"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/_3"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/wi_fi"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/_1"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.684"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/_30"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="348dp"
            android:layout_height="100dp"
            android:layout_marginTop="124dp"
            android:text="@string/vip_18"
            android:textColor="#655E5E"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <FrameLayout
            android:id="@+id/frameLay"
            android:layout_width="371dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/md" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="16dp"
                android:text="@string/aboutHotel2"
                android:textColor="#2C3035"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="38dp"
                android:text="@string/mostNeeded"
                android:textColor="#828796"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="54dp"
                android:text="@string/stroke"
                android:textColor="#828796"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/ic_checkplus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="76dp"
                android:text="@string/whatInPrice"
                android:textColor="#2C3035"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="100dp"
                android:text="@string/mostNeeded"
                android:textColor="#828796"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="114dp"
                android:text="@string/stroke"
                android:textColor="#828796"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/ic_clear" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="132dp"
                android:text="@string/whatAbroadThePrice"
                android:textColor="#2C3035"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="158dp"
                android:text="@string/mostNeeded"
                android:textColor="#828796"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/ticksquare" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/ticksquare" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ticksquare" />
        </FrameLayout>
        <Button
            android:id="@+id/NextPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:backgroundTint="#0D72FF"
            android:text="@string/chooseRoom"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>