<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivety">

    <LinearLayout
        android:id="@+id/linearLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#FFFFFF"
            android:shadowColor="@color/black"
            android:text="@string/steigenberger_makadi"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:icon="@android:drawable/ic_input_delete"
            app:iconTint="#000000" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayout"
        android:layout_width="375dp"
        android:layout_height="539dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLay">

        <ImageView
            android:id="@+id/image"
            android:layout_width="343dp"
            android:layout_height="257dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/image_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/infoNum"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:layout_width="123dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:text="@string/AllIn"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="121dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:text="@string/Condit"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="192dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/infomore"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Подробнее о номере"
                android:textColor="#0D72FF"></TextView>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/ticksquare"
                android:backgroundTint="#0D72FF" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/Price2"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="166dp"
            android:layout_height="19dp"
            android:layout_marginTop="32dp"
            android:text="@string/_7"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/NextPageSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:backgroundTint="#0D72FF"
            android:text="@string/ChooseRoom"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>